[package]
name = "cock-cli"
version = "1.0.0"
description = "CLI for `cock-lib`"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
repository = "https://github.com/im-turn/cock-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cock-lib = { path = "../cock-lib", version= "1.0.0" }
