[package]
name = "cock-cli"
version = "1.0.1"
description = "CLI for `cock-lib`"
license = "MIT"
edition = '2021'
authors = ["turn"]
keywords = ["cocks", "penis", "anatomy", "tier", "ranking"]
repository = "https://github.com/im-turn/cock-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cock-lib = "1.0.1"
