[package]
name = "cock-cli"
version = "2.0.0"
description = "CLI for `cock-lib`"
license = "MIT"
edition = '2021'
authors = ["turn"]
keywords = ["cock", "cocks", "cli"]
repository = "https://github.com/im-turn/cock-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cock-lib = "2.2.0"
